fixed spacing in code

--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,11 @@ ul {
   flex-wrap: wrap; 
 }
 
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
 .card-container{
   display: flex;
   justify-content: center;
